Fix section 1 button display on small screens;

--- a/assets/css/queries.css
+++ b/assets/css/queries.css
@@ -163,7 +163,8 @@
     text-align: left;
   }
 
-  .cta {
+  .text-side .cta {
+    margin: 0;
     padding: 1em 4em;
   }
 
